# EtudeFrInclusif

./: MANIFEST.in  README.md  __init__.py  build_corpus.py  collect_fr_inc.py  collect_oscar.py  constraints.txt  eval.py  perf.txt  pyproject.toml  quoi.py  requirements.txt  setup.py  test.py  user_interface.py
_attic/: __init__.py  build_corpus.py  collect_fr_inc.py  collect_oscar.py  corpus_fr_inc_to_csv.py  corpus_stats.py  count_same_entry.py  count_same_files.py  count_similar_files.py  eval.py  eval_models.py  example.py  is_there_duplicate.py  mem.txt  repartition_token.py  same_files.txt  test.py  user_interface.py
data/: dictrules.txt  flexrulesuni.txt  fr_inclusif.csv  listetermesneutres.txt
dataset/: .~lock.corrected_exploration_ann.csv#  .~lock.exploration_ann.csv#  SUPER_new_dataset_err.csv  count_same_files.py  docs_ref.csv  exploration.csv  exploration_ann.csv  exploration_bis.csv  filtered_exploration.csv  info_corpus.txt  new_corpus.csv  same_entry.txt  same_files.txt
dataset_tools/: build_corpus.py  collect_oscar.py  filter_proc.py  repredict.py  user_interface.py
etude_fr_inclusif/: __init__.py  _utils.py  adv_rule_based.py  crf.py  inclure.py  naive_rule_based.py  splitter.py  super_model.py
evaluation/: eval_models.py
explore/: femADV_ann.csv  neuADV_ann.csv  samples_ann.csv
for_me/: embedding_by_dist.py  graph_words.py
guides/: guide_constitution_corpus
res/: arb_preds.csv  crf_preds.csv  inclure_preds.csv  nrb_preds.csv  obs.csv  perf.txt
src/: __init__.py  _utils.py  adv_rule_based.py  inclure.py  naive_rule_based.py  (+2 more)
(+6017 files in other folders)
