[project]
name = "EtudeFrInclusif"
version = "2024.06.14"
description = "package for detection of inclusive french in french document"
authors = [ { name="Samba Fall" } ]
readme = "README.md"
requires-python = ">=3.10.12"

[project.urls]
Homepage = "https://github.com/SambaHFall/EtudeFrInclusif"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
